p3/confs/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground-service
  labels:
    app: wil-playground
spec:
  type: LoadBalancer
  ports:
  - port: 8888
    targetPort: 8888
    protocol: TCP
  selector:
    app: wil-playground
